[workspace]
members = [
    "database/uranus-kv", # key value store
    "database/uranus-p",  # sql parser
    "database/uranus-c",  # client binary
    "database/uranus-s",  # server
    "network/uranus-rin", # router & context & middleware framework
    "tests"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
thiserror = "1.0"
tracing ="0.1.34"
tracing-subscriber = { version = "0.3.11" }
bytes = "1"
