[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "test_client"
path = "test_client.rs"

[dependencies]
tokio = { version = "1", features = ["full"]}
uranus-s = { path = "../database/uranus-s" }
uranus-c = { path = "../database/uranus-c" }
tracing-subscriber = { workspace = true }
